syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "RecordProto";

service RecordService {
  rpc createRecord(RecordRequest) returns (RecordResponse);
}

message RecordRequest {
  int64 workflowId = 1;
  int64 laptime = 73000;
}

message RecordResponse {
  int32 rank = 1;
}